#13531 closed defect (fixed)
Wrong item returned for wxEVT_COMMAND_DATAVIEW_ITEM_CONTEXT_MENU
Reported by: | jdog | Owned by: | vaclavslavik |
---|---|---|---|
Priority: | normal | Milestone: | |
Component: | wxGTK | Version: | stable-latest |
Keywords: | wxDataViewCtrl | Cc: | |
Blocked By: | Blocking: | ||
Patch: | no |
Description
I have a wxDataViewCtrl and use the context menu event to display a context menu related to the item the user clicked on.
There is a problem with wxDataViewEvent::GetItem() returning wrong item if there was other item(s) selected before the user clicked.
With wxMSW it works as expected:
- When I right click an item it is immediately selected
- wxDataViewEvent::GetItem() returns the expected item, below the cursor
With wxGTK:
- When I right click the old selection is kept
- wxDataViewEvent::GetItem() returns the selected item, and not the item below the cursor
Change History (4)
comment:1 Changed 4 years ago by vadz
- Keywords wxDataViewCtrl added
comment:2 Changed 4 years ago by vaclavslavik
- Owner set to vaclavslavik
- Status changed from new to accepted
comment:3 Changed 4 years ago by VS
- Resolution set to fixed
- Status changed from accepted to closed
comment:4 Changed 4 years ago by VS
Note: See
TracTickets for help on using
tickets.
This was apparently fixed since then.