Fix selection behavior on right-click in wxGTK wxDataViewCtrl.

Select the item under the cursor even when right-clicking it, because
it's expected behavior (Nautilus does it too).

Fixes #13531.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_3_0_BRANCH@75275 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775